[gd_scene load_steps=19 format=2]

[ext_resource path="res://scripts/OptionsScreen.gd" type="Script" id=1]
[ext_resource path="res://sprites/UI/background_title_UI.png" type="Texture" id=2]
[ext_resource path="res://custom/game_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://sprites/UI/icon_off.png" type="Texture" id=4]
[ext_resource path="res://sprites/UI/icon_on.png" type="Texture" id=5]
[ext_resource path="res://fonts/game_over.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://sprites/UI/head_selector.png" type="Texture" id=7]
[ext_resource path="res://sprites/UI/slider_bar.png" type="Texture" id=8]
[ext_resource path="res://sounds/main_song.wav" type="AudioStream" id=9]
[ext_resource path="res://sounds/switch_skin_sound.wav" type="AudioStream" id=10]
[ext_resource path="res://addons/paulloz.colorblindness/colorblindness.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 72
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 340, 6 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 340, 6 )

[sub_resource type="DynamicFont" id=7]
size = 61
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 85
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 85
font_data = ExtResource( 6 )

[node name="OptionsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -1.29236
margin_right = 1022.71
margin_bottom = 600.0
texture = ExtResource( 2 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 974.0
margin_bottom = 550.0
alignment = 1

[node name="Label" type="Label" parent="Menu"]
margin_right = 924.0
margin_bottom = 57.0
custom_fonts/font = ExtResource( 3 )
text = "OPCOES"
align = 1
valign = 1

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 61.0
margin_right = 924.0
margin_bottom = 500.0
size_flags_vertical = 3
alignment = 1

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_left = 292.0
margin_right = 632.0
margin_bottom = 439.0
size_flags_vertical = 3
alignment = 1

[node name="CheckButton" type="CheckButton" parent="Menu/CenterRow/Buttons"]
margin_left = 76.0
margin_top = 38.0
margin_right = 264.0
margin_bottom = 87.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_icons/off = ExtResource( 4 )
custom_icons/on = ExtResource( 5 )
custom_fonts/font = SubResource( 1 )
pressed = true
text = "DEGRADE"
flat = true
align = 1

[node name="MusicLabel" type="Label" parent="Menu/CenterRow/Buttons"]
margin_top = 91.0
margin_right = 340.0
margin_bottom = 132.0
custom_fonts/font = SubResource( 2 )
text = "VOLUME DA MÚSICA"
align = 1
valign = 1

[node name="HSlider" type="HSlider" parent="Menu/CenterRow/Buttons"]
margin_top = 136.0
margin_right = 340.0
margin_bottom = 166.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 4
custom_icons/grabber_disabled = ExtResource( 7 )
custom_icons/grabber_highlight = ExtResource( 7 )
custom_icons/grabber = ExtResource( 7 )
custom_styles/slider = SubResource( 5 )
min_value = -80.0
max_value = 0.0
value = -40.0
ticks_on_borders = false

[node name="MusicLabel2" type="Label" parent="Menu/CenterRow/Buttons"]
margin_top = 170.0
margin_right = 340.0
margin_bottom = 211.0
custom_fonts/font = SubResource( 2 )
text = "VOLUME DO VFX"
align = 1
valign = 1

[node name="HSlider2" type="HSlider" parent="Menu/CenterRow/Buttons"]
margin_top = 215.0
margin_right = 340.0
margin_bottom = 245.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 4
custom_icons/grabber_disabled = ExtResource( 7 )
custom_icons/grabber_highlight = ExtResource( 7 )
custom_icons/grabber = ExtResource( 7 )
custom_styles/slider = SubResource( 6 )
min_value = -80.0
max_value = 0.0
value = -40.0

[node name="MusicLabel3" type="Label" parent="Menu/CenterRow/Buttons"]
margin_top = 249.0
margin_right = 340.0
margin_bottom = 284.0
custom_fonts/font = SubResource( 7 )
text = "FILTROS PARA DALTÔONICOS"
align = 1
valign = 1

[node name="Button2" type="Button" parent="Menu/CenterRow/Buttons"]
margin_left = 94.0
margin_top = 288.0
margin_right = 246.0
margin_bottom = 342.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "NENHUM"
flat = true

[node name="Button" type="Button" parent="Menu/CenterRow/Buttons"]
margin_left = 98.0
margin_top = 346.0
margin_right = 241.0
margin_bottom = 400.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "VOLTAR"
flat = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "Music"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
bus = "Music"

[node name="Colorblindness" type="Node" parent="."]
script = ExtResource( 11 )
[connection signal="toggled" from="Menu/CenterRow/Buttons/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="focus_entered" from="Menu/CenterRow/Buttons/HSlider" to="." method="_on_HSlider_focus_entered"]
[connection signal="focus_exited" from="Menu/CenterRow/Buttons/HSlider" to="." method="_on_HSlider_focus_exited"]
[connection signal="value_changed" from="Menu/CenterRow/Buttons/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="focus_entered" from="Menu/CenterRow/Buttons/HSlider2" to="." method="_on_HSlider2_focus_entered"]
[connection signal="value_changed" from="Menu/CenterRow/Buttons/HSlider2" to="." method="_on_HSlider2_value_changed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Button" to="." method="_on_Button_pressed"]
